--- a/notebooks/database_connection_financeiro.ipynb
+++ b/notebooks/database_connection_financeiro.ipynb
@@ -498,7 +498,7 @@
     "metadata = MetaData(schema='financeiro')\n",
     "\n",
     "# Definição da tabela meta_recebimento\n",
-    "meta_recebimento = Table('meta_despesas', metadata,\n",
+    "meta_despesas = Table('meta_despesas', metadata,\n",
     "                         Column('Data', Date),\n",
     "                         Column('Mes', Integer),\n",
     "                         Column('Despesas', Float),\n",
