--- a/notebooks/database_connection_seguro.ipynb
+++ b/notebooks/database_connection_seguro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8b1aebb3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "73a01df3",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ef8e7f1f",
    "metadata": {},
    "outputs": [
@@ -244,11 +244,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(datetime.datetime(2024, 10, 1, 0, 0), 20)\n",
-      "(datetime.datetime(2024, 9, 1, 0, 0), 20)\n",
-      "(datetime.datetime(2024, 8, 1, 0, 0), 20)\n",
-      "(datetime.datetime(2024, 7, 1, 0, 0), 20)\n",
-      "(datetime.datetime(2024, 6, 1, 0, 0), 20)\n"
+      "(datetime.datetime(2024, 10, 1, 0, 0), 5)\n",
+      "(datetime.datetime(2024, 9, 1, 0, 0), 5)\n",
+      "(datetime.datetime(2024, 8, 1, 0, 0), 5)\n",
+      "(datetime.datetime(2024, 7, 1, 0, 0), 5)\n",
+      "(datetime.datetime(2024, 6, 1, 0, 0), 5)\n"
      ]
     }
    ],
@@ -271,16 +271,8 @@
     "\n",
     "# Definição da tabela meta_odonto\n",
     "meta_odonto = Table('meta_odonto', metadata,\n",
-    "                         Column('Data contratação', Date),\n",
-    "                         Column('valor_contratação', Float),\n",
-    "                         Column('Data', Date),\n",
-    "                         Column('Estado', String),\n",
-    "                         Column('lead_nome', String),\n",
-    "                         Column('lead_status', String),\n",
-    "                         Column('operadora_nome', String),\n",
-    "                         Column('Origem', String),\n",
-    "                         Column('valor_comissao', Float),\n",
-    "                         Column('Vendedor', String),                      \n",
+    "                         Column('Mes', Date),\n",
+    "                         Column('Meta', Integer),                      \n",
     "                         )\n",
     "\n",
     "# Criação da tabela no banco de dados\n",
@@ -587,6 +579,260 @@
     "# Consulta para verificar os dados inseridos\n",
     "with engine.connect() as connection:\n",
     "    result = connection.execute(text(\"SELECT * FROM seguro.seguro_condominial LIMIT 5;\"))\n",
+    "    for row in result:\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63086b8a",
+   "metadata": {},
+   "source": [
+    "## Saúde"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8381c6c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de linhas e colunas:\n",
+      "(468, 10)\n",
+      "\n",
+      "-------------------------------------\n",
+      " Data contratação     object\n",
+      "Data                  object\n",
+      " Produto              object\n",
+      "Estado                object\n",
+      "Nome                  object\n",
+      "Operadora             object\n",
+      "Origem                object\n",
+      "Status                object\n",
+      "Vendedor              object\n",
+      " Valor               float64\n",
+      "dtype: object\n",
+      "\n",
+      "-------------------------------------\n",
+      "\n",
+      "Visualização inicial dos dados:\n",
+      "   Data contratação                Data  Produto             Estado  \\\n",
+      "0               NaN  16 de jul. de 2024        -              Bahia   \n",
+      "1               NaN  11 de jul. de 2024        -  Rio Grande do Sul   \n",
+      "2               NaN   3 de jul. de 2024        -              Bahia   \n",
+      "3               NaN   3 de jul. de 2024        -              Bahia   \n",
+      "4               NaN  28 de jun. de 2024        -             Paraná   \n",
+      "\n",
+      "            Nome           Operadora       Origem      Status     Vendedor  \\\n",
+      "0   Adrian Moris  Operadora genérica     Orgânica  1º contato  Ester Souza   \n",
+      "1    Bella Covel          Unimed CNU  Precontrato  1º contato  Ester Souza   \n",
+      "2    Caio Vernet  Operadora genérica    RDStation  1º contato  Ester Souza   \n",
+      "3  Daphne Reller  Operadora genérica    RDStation  1º contato  Ester Souza   \n",
+      "4     Eron Bates                   -    RDStation  1º contato  Ester Souza   \n",
+      "\n",
+      "    Valor  \n",
+      "0     NaN  \n",
+      "1     NaN  \n",
+      "2     NaN  \n",
+      "3     NaN  \n",
+      "4     NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Carregar os dados da aba específica do arquivo Excel\n",
+    "df = pd.read_excel(excel_path, sheet_name='saúde') \n",
+    "\n",
+    "# Exibir o número de linhas e colunas\n",
+    "print('Número de linhas e colunas:')\n",
+    "print(df.shape)\n",
+    "\n",
+    "print('\\n-------------------------------------')\n",
+    "\n",
+    "# Exibir os tipos de dados ajustados\n",
+    "print(df.dtypes)\n",
+    "\n",
+    "print('\\n-------------------------------------')\n",
+    "\n",
+    "# Exibir as primeiras linhas dos dados\n",
+    "print('\\nVisualização inicial dos dados:')\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "22eb754e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(None, '16 de jul. de 2024', '-', 'Bahia', 'Adrian Moris', 'Operadora genérica', 'Orgânica', '1º contato', 'Ester Souza', None)\n",
+      "(None, '11 de jul. de 2024', '-', 'Rio Grande do Sul', 'Bella Covel', 'Unimed CNU', 'Precontrato', '1º contato', 'Ester Souza', None)\n",
+      "(None, '3 de jul. de 2024', '-', 'Bahia', 'Caio Vernet', 'Operadora genérica', 'RDStation', '1º contato', 'Ester Souza', None)\n",
+      "(None, '3 de jul. de 2024', '-', 'Bahia', 'Daphne Reller', 'Operadora genérica', 'RDStation', '1º contato', 'Ester Souza', None)\n",
+      "(None, '28 de jun. de 2024', '-', 'Paraná', 'Eron Bates', '-', 'RDStation', '1º contato', 'Ester Souza', None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inserir dados no banco de dados PostgreSQL\n",
+    "\n",
+    "# Definir a string de conexão com o banco de dados PostgreSQL\n",
+    "postgres_str = f'postgresql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}'\n",
+    "        \n",
+    "# Configuração da conexão com o banco de dados\n",
+    "engine = create_engine(postgres_str)\n",
+    "\n",
+    "# Criação do schema dre_ecbahia\n",
+    "with engine.connect() as connection:\n",
+    "    connection.execute(text(\"CREATE SCHEMA IF NOT EXISTS seguro;\"))\n",
+    "    \n",
+    "# from sqlalchemy import Table, Column, Integer, String, Float, MetaData\n",
+    "    \n",
+    "metadata = MetaData(schema='seguro')\n",
+    "\n",
+    "# Definição da tabela seguro condominial\n",
+    "saude = Table('saude', metadata,\n",
+    "                         Column('Data contratação', Date),\n",
+    "                         Column('Data', Date),\n",
+    "                         Column('Produto', String),\n",
+    "                         Column('Estado', String),\n",
+    "                         Column('Nome', String),\n",
+    "                         Column('Operadora', String),\n",
+    "                         Column('Origem', String),\n",
+    "                         Column('Status', String),\n",
+    "                         Column('Vendedor', String),\n",
+    "                         Column('Valor', Float),\n",
+    "                         )\n",
+    "\n",
+    "# Criação da tabela no banco de dados\n",
+    "metadata.create_all(engine)\n",
+    "\n",
+    "# Inserção dos dados na tabela f_razao_contabil\n",
+    "df.to_sql('saude', engine, schema='seguro', if_exists='replace', index=False)\n",
+    "\n",
+    "# Consulta para verificar os dados inseridos\n",
+    "with engine.connect() as connection:\n",
+    "    result = connection.execute(text(\"SELECT * FROM seguro.saude LIMIT 5;\"))\n",
+    "    for row in result:\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "895898c7",
+   "metadata": {},
+   "source": [
+    "## Meta Saúde"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8a012dd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de linhas e colunas:\n",
+      "(10, 2)\n",
+      "\n",
+      "-------------------------------------\n",
+      "Mes     datetime64[ns]\n",
+      "Meta             int64\n",
+      "dtype: object\n",
+      "\n",
+      "-------------------------------------\n",
+      "\n",
+      "Visualização inicial dos dados:\n",
+      "         Mes  Meta\n",
+      "0 2024-10-01     5\n",
+      "1 2024-09-01     5\n",
+      "2 2024-08-01     5\n",
+      "3 2024-07-01     5\n",
+      "4 2024-06-01     5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Carregar os dados da aba específica do arquivo Excel\n",
+    "df = pd.read_excel(excel_path, sheet_name='meta_saude') \n",
+    "\n",
+    "# Exibir o número de linhas e colunas\n",
+    "print('Número de linhas e colunas:')\n",
+    "print(df.shape)\n",
+    "\n",
+    "print('\\n-------------------------------------')\n",
+    "\n",
+    "# Exibir os tipos de dados ajustados\n",
+    "print(df.dtypes)\n",
+    "\n",
+    "print('\\n-------------------------------------')\n",
+    "\n",
+    "# Exibir as primeiras linhas dos dados\n",
+    "print('\\nVisualização inicial dos dados:')\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a61bce00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(datetime.datetime(2024, 10, 1, 0, 0), 5)\n",
+      "(datetime.datetime(2024, 9, 1, 0, 0), 5)\n",
+      "(datetime.datetime(2024, 8, 1, 0, 0), 5)\n",
+      "(datetime.datetime(2024, 7, 1, 0, 0), 5)\n",
+      "(datetime.datetime(2024, 6, 1, 0, 0), 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inserir dados no banco de dados PostgreSQL\n",
+    "\n",
+    "# Definir a string de conexão com o banco de dados PostgreSQL\n",
+    "postgres_str = f'postgresql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}'\n",
+    "        \n",
+    "# Configuração da conexão com o banco de dados\n",
+    "engine = create_engine(postgres_str)\n",
+    "\n",
+    "# Criação do schema dre_ecbahia\n",
+    "with engine.connect() as connection:\n",
+    "    connection.execute(text(\"CREATE SCHEMA IF NOT EXISTS seguro;\"))\n",
+    "    \n",
+    "# from sqlalchemy import Table, Column, Integer, String, Float, MetaData\n",
+    "    \n",
+    "metadata = MetaData(schema='seguro')\n",
+    "\n",
+    "# Definição da tabela seguro condominial\n",
+    "meta_saude = Table('meta_saude', metadata,\n",
+    "                         Column('Mes', Date),\n",
+    "                         Column('Meta', Integer),\n",
+    "                         )\n",
+    "\n",
+    "# Criação da tabela no banco de dados\n",
+    "metadata.create_all(engine)\n",
+    "\n",
+    "# Inserção dos dados na tabela f_razao_contabil\n",
+    "df.to_sql('meta_saude', engine, schema='seguro', if_exists='replace', index=False)\n",
+    "\n",
+    "# Consulta para verificar os dados inseridos\n",
+    "with engine.connect() as connection:\n",
+    "    result = connection.execute(text(\"SELECT * FROM seguro.meta_saude LIMIT 5;\"))\n",
     "    for row in result:\n",
     "        print(row)"
    ]
