--- a/notebooks/bq_connection_odonto.ipynb
+++ b/notebooks/bq_connection_odonto.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "95a58aea",
+   "id": "1dfbef04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "93c37686",
+   "id": "8cc9cc1c",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "420c7e4b",
+   "id": "657a9031",
    "metadata": {},
    "outputs": [
     {
@@ -74,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "de3318ee",
+   "execution_count": 8,
+   "id": "ffa74c95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,6 @@
     "    print(f\"\\nDados carregados da aba '{sheet_name}':\")\n",
     "    print(f\"Tamanho (linhas, colunas): {df.shape}\")\n",
     "    print(f\"Tipos de dados:\\n{df.dtypes}\")\n",
-    "    print(f\"Primeiras linhas:\\n{df.head()}\")\n",
     "    \n",
     "    job_config = bigquery.LoadJobConfig(\n",
     "        schema=schema,\n",
@@ -112,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "68a1f6f5",
+   "execution_count": 9,
+   "id": "d9737259",
    "metadata": {},
    "outputs": [
     {
@@ -134,21 +133,7 @@
       "Status                      object\n",
       "Vendedor                    object\n",
       "Valor                      float64\n",
-      "dtype: object\n",
-      "Primeiras linhas:\n",
-      "  Data contratação Data Produto          Estado             Nome  \\\n",
-      "0              NaT  NaT       -  Rio de Janeiro     Adam Andrade   \n",
-      "1              NaT  NaT       -           Bahia  Jeffrey Rosario   \n",
-      "2              NaT  NaT       -           Bahia    Susan Johnson   \n",
-      "3              NaT  NaT       -           Bahia  Marvin Williams   \n",
-      "4              NaT  NaT       -       São Paulo     Leslie James   \n",
-      "\n",
-      "        Operadora     Origem       Status      Vendedor  Valor  \n",
-      "0  Unidade Dental  RDStation  Desistência  Mário Santos    NaN  \n",
-      "1    Odonto Quali  RDStation  Desistência  Daniel Souza    NaN  \n",
-      "2    Odonto Quali  RDStation  Desistência  Mário Santos    NaN  \n",
-      "3    Odonto Quali  RDStation  Desistência  Daniel Souza    NaN  \n",
-      "4  Unidade Dental  RDStation  Desistência  Mário Santos    NaN  \n"
+      "dtype: object\n"
      ]
     },
     {
