--- a/notebooks/bq_connection_meta_odonto.ipynb
+++ b/notebooks/bq_connection_meta_odonto.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "# --- Definições padrão do projeto, dataset e tabela ---\n",
     "project_id = 'telemedicina-462920'\n",
-    "dataset_id = 'seguros'\n",
+    "dataset_id = 'saude'\n",
     "\n",
     "# Função para construir o full_table_id no formato 'projeto.dataset.tabela'\n",
     "def get_full_table_id(project, dataset, table):\n",
@@ -146,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dados enviados com sucesso para: telemedicina-462920.seguros.meta_odonto\n"
+      "✅ Dados enviados com sucesso para: telemedicina-462920.saude.meta_odonto\n"
      ]
     }
    ],
