--- a/notebooks/bq_connection_odonto.ipynb
+++ b/notebooks/bq_connection_odonto.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "# --- Definições padrão do projeto, dataset e tabela ---\n",
     "project_id = 'telemedicina-462920'\n",
-    "dataset_id = 'seguros'\n",
+    "dataset_id = 'saude'\n",
     "\n",
     "# Função para construir o full_table_id no formato 'projeto.dataset.tabela'\n",
     "def get_full_table_id(project, dataset, table):\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ffa74c95",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d9737259",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dados enviados com sucesso para: telemedicina-462920.seguros.odonto\n"
+      "✅ Dados enviados com sucesso para: telemedicina-462920.saude.odonto\n"
      ]
     }
    ],
