--- a/notebooks/bq_connection_saude.ipynb
+++ b/notebooks/bq_connection_saude.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "# --- Definições padrão do projeto, dataset e tabela ---\n",
     "project_id = 'telemedicina-462920'\n",
-    "dataset_id = 'seguros'\n",
+    "dataset_id = 'saude'\n",
     "\n",
     "# Função para construir o full_table_id no formato 'projeto.dataset.tabela'\n",
     "def get_full_table_id(project, dataset, table):\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "5d4e2f5f",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "873f1e1a",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dados enviados com sucesso para: telemedicina-462920.seguros.saude\n"
+      "✅ Dados enviados com sucesso para: telemedicina-462920.saude.saude\n"
      ]
     }
    ],
