--- a/notebooks/bq_connection_seguro_condominial.ipynb
+++ b/notebooks/bq_connection_seguro_condominial.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5e588ed0",
+   "id": "5442874a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8cf78ed2",
+   "id": "ce4b0250",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b12c6503",
+   "id": "d3d1ff80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "\n",
     "# --- Definições padrão do projeto, dataset e tabela ---\n",
     "project_id = 'telemedicina-462920'\n",
-    "dataset_id = 'saude'\n",
+    "dataset_id = 'seguros'\n",
     "\n",
     "# Função para construir o full_table_id no formato 'projeto.dataset.tabela'\n",
     "def get_full_table_id(project, dataset, table):\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "55b02428",
+   "id": "df656bbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,25 +72,28 @@
     "    excel_path = os.getenv(\"EXCEL_FILE_PATH\")\n",
     "    if not excel_path or not os.path.exists(excel_path):\n",
     "        raise FileNotFoundError(\"Arquivo Excel não encontrado ou variável EXCEL_FILE_PATH não definida.\")\n",
-    "    \n",
-    "    # Leitura dos dados\n",
+    "        \n",
     "    df = pd.read_excel(excel_path, sheet_name=sheet_name)\n",
+    "    \n",
+    "    # Converte colunas do tipo DATE para datetime no pandas\n",
+    "    date_columns = [field.name for field in schema if field.field_type == \"DATE\"]\n",
+    "    for col in date_columns:\n",
+    "        df[col] = pd.to_datetime(df[col], errors='coerce')\n",
+    "    \n",
+    "    # Não precisa ler novamente aqui\n",
     "    print(f\"\\nDados carregados da aba '{sheet_name}':\")\n",
     "    print(f\"Tamanho (linhas, colunas): {df.shape}\")\n",
     "    print(f\"Tipos de dados:\\n{df.dtypes}\")\n",
     "    \n",
-    "    # Configuração do job de carga com schema e modo escrita\n",
     "    job_config = bigquery.LoadJobConfig(\n",
     "        schema=schema,\n",
-    "        write_disposition=\"WRITE_TRUNCATE\"  # Substitui a tabela toda\n",
+    "        write_disposition=\"WRITE_TRUNCATE\"\n",
     "    )\n",
     "    \n",
-    "    # Monta o ID completo da tabela\n",
     "    full_table_id = get_full_table_id(project_id, dataset_id, table_name)\n",
     "    \n",
-    "    # Envio dos dados para o BigQuery\n",
     "    job = client.load_table_from_dataframe(df, full_table_id, job_config=job_config)\n",
-    "    job.result()  # Espera o término do job\n",
+    "    job.result()\n",
     "    \n",
     "    print(f\"✅ Dados enviados com sucesso para: {full_table_id}\")"
    ]
@@ -98,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3242b871",
+   "id": "95565628",
    "metadata": {},
    "outputs": [
     {
@@ -106,11 +109,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Dados carregados da aba 'meta_saude':\n",
-      "Tamanho (linhas, colunas): (10, 2)\n",
+      "Dados carregados da aba 'seguro_condominial':\n",
+      "Tamanho (linhas, colunas): (520, 12)\n",
       "Tipos de dados:\n",
-      "Mes     datetime64[ns]\n",
-      "Meta             int64\n",
+      "Condominio                     object\n",
+      "Operadora                      object\n",
+      "Administradora                 object\n",
+      "Responsavel                    object\n",
+      "Status                         object\n",
+      "Data de Contato        datetime64[ns]\n",
+      "Data de Contratação    datetime64[ns]\n",
+      "Data de Vencimento     datetime64[ns]\n",
+      "Premio                        float64\n",
+      "Comissão Corretora            float64\n",
+      "Cashback Adm                  float64\n",
+      "Cashback Pago Adm             float64\n",
       "dtype: object\n"
      ]
     },
@@ -126,21 +139,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dados enviados com sucesso para: telemedicina-462920.saude.meta_saude\n"
+      "✅ Dados enviados com sucesso para: telemedicina-462920.seguros.seguro_condominial\n"
      ]
     }
    ],
    "source": [
     "# --- Exemplo de uso da função para a aba e tabela meta_odonto ---\n",
-    "schema_meta_saude = [\n",
-    "    bigquery.SchemaField(\"Mes\", \"DATE\"),\n",
-    "    bigquery.SchemaField(\"Meta\", \"INTEGER\"),\n",
+    "schema_seguro_condominial = [\n",
+    "    bigquery.SchemaField(\"Condominio\", \"STRING\"),\n",
+    "    bigquery.SchemaField(\"Operadora\", \"STRING\"),\n",
+    "    bigquery.SchemaField(\"Administradora\", \"STRING\"),\n",
+    "    bigquery.SchemaField(\"Responsavel\", \"STRING\"),\n",
+    "    bigquery.SchemaField(\"Status\", \"STRING\"),\n",
+    "    bigquery.SchemaField(\"Data de Contato\", \"DATE\"),\n",
+    "    bigquery.SchemaField(\"Data de Contratação\", \"DATE\"),\n",
+    "    bigquery.SchemaField(\"Data de Vencimento\", \"DATE\"),\n",
+    "    bigquery.SchemaField(\"Premio\", \"FLOAT\"),\n",
+    "    bigquery.SchemaField(\"Comissão Corretora\", \"FLOAT\"),\n",
+    "    bigquery.SchemaField(\"Cashback Adm\", \"FLOAT\"),\n",
+    "    bigquery.SchemaField(\"Cashback Pago Adm\", \"FLOAT\"),\n",
     "]\n",
     "\n",
     "upload_to_bigquery_from_excel(\n",
-    "    sheet_name='meta_saude', \n",
-    "    table_name='meta_saude', \n",
-    "    schema=schema_meta_saude\n",
+    "    sheet_name='seguro_condominial', \n",
+    "    table_name='seguro_condominial', \n",
+    "    schema=schema_seguro_condominial\n",
     ")"
    ]
   }
