--- a/notebooks/bq_connection_recebimento.ipynb
+++ b/notebooks/bq_connection_recebimento.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3397724",
+   "id": "1b87409f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2787aaf2",
+   "id": "dea6d472",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d8a45d69",
+   "id": "7c43326b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "\n",
     "# --- Definições padrão do projeto, dataset e tabela ---\n",
     "project_id = 'telemedicina-462920'\n",
-    "dataset_id = 'seguros'\n",
+    "dataset_id = 'financeiro'\n",
     "\n",
     "# Função para construir o full_table_id no formato 'projeto.dataset.tabela'\n",
     "def get_full_table_id(project, dataset, table):\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2e8190bc",
+   "id": "68c554fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c396355f",
+   "execution_count": 5,
+   "id": "05dd1fb0",
    "metadata": {},
    "outputs": [
     {
@@ -109,19 +109,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Dados carregados da aba 'seguro_residencial':\n",
-      "Tamanho (linhas, colunas): (195, 10)\n",
+      "Dados carregados da aba 'recebimento':\n",
+      "Tamanho (linhas, colunas): (498, 5)\n",
       "Tipos de dados:\n",
-      "data_contratacao     datetime64[ns]\n",
-      "valor_contratacao           float64\n",
-      "data                 datetime64[ns]\n",
-      "estado                       object\n",
-      "lead_nome                    object\n",
-      "lead_status                  object\n",
-      "operadora_nome               object\n",
-      "origem                       object\n",
-      "valor_comissao              float64\n",
-      "vendedor                     object\n",
+      "DATA              datetime64[ns]\n",
+      "CATEGORIA                 object\n",
+      "CLIENTE                   object\n",
+      "ITEM_PCG                  object\n",
+      "TOTAL_RECEBIDO           float64\n",
       "dtype: object\n"
      ]
     },
@@ -137,29 +132,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dados enviados com sucesso para: telemedicina-462920.seguros.seguro_residencial\n"
+      "✅ Dados enviados com sucesso para: telemedicina-462920.financeiro.recebimento\n"
      ]
     }
    ],
    "source": [
     "# --- Exemplo de uso da função para a aba e tabela meta_odonto ---\n",
-    "schema_seguro_residencial = [\n",
-    "    bigquery.SchemaField(\"data_contratacao\", \"DATE\"),\n",
-    "    bigquery.SchemaField(\"valor_contratacao\", \"FLOAT\"),\n",
-    "    bigquery.SchemaField(\"data\", \"DATE\"),\n",
-    "    bigquery.SchemaField(\"estado\", \"STRING\"),\n",
-    "    bigquery.SchemaField(\"lead_nome\", \"STRING\"),\n",
-    "    bigquery.SchemaField(\"lead_status\", \"STRING\"),\n",
-    "    bigquery.SchemaField(\"operadora_nome\", \"STRING\"),\n",
-    "    bigquery.SchemaField(\"origem\", \"STRING\"),\n",
-    "    bigquery.SchemaField(\"valor_comissao\", \"FLOAT\"),\n",
-    "    bigquery.SchemaField(\"vendedor\", \"STRING\"),\n",
+    "schema_recebimento = [\n",
+    "    bigquery.SchemaField(\"DATA\", \"DATE\"),\n",
+    "    bigquery.SchemaField(\"CATEGORIA\", \"STRING\"),\n",
+    "    bigquery.SchemaField(\"CLIENTE\", \"STRING\"),\n",
+    "    bigquery.SchemaField(\"ITEM_PCG\", \"STRING\"),\n",
+    "    bigquery.SchemaField(\"TOTAL_RECEBIDO\", \"FLOAT\"),\n",
     "]\n",
     "\n",
     "upload_to_bigquery_from_excel(\n",
-    "    sheet_name='seguro_residencial', \n",
-    "    table_name='seguro_residencial', \n",
-    "    schema=schema_seguro_residencial\n",
+    "    sheet_name='recebimento', \n",
+    "    table_name='recebimento', \n",
+    "    schema=schema_recebimento\n",
     ")"
    ]
   }
